plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'application'
	id 'groovy'
}

group = 'raisetech.student.management'
version = '1.0.0'

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(17))
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

application {
	mainClass = 'raisetech.student.management.StudentManagementApplication'
}

repositories {
	gradlePluginPortal()
	mavenCentral()
	google()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.apache.commons:commons-lang3:3.14.0'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.codehaus.groovy:groovy-all:3.0.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.h2database:h2'
}

tasks.withType(JavaCompile).configureEach {
	javaCompiler = javaToolchains.compilerFor {
		languageVersion.set(JavaLanguageVersion.of(17))
	}
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
}
tasks.withType(JavaCompile) {
	options.forkOptions.jvmArgs << '-Djdk.attach.allowAttachSelf=true'
}